listar, eliminar y actualizar vehiculos